2.0.1 (2023-05-10)
-----------------------------
* pyRfactor2SharedMemory
    - Hotfix to a data freeze issue reintroduced in v2.0.0
      when trying to solve data interruption issue.
      The code has been revert back to earlier version in the meantime.

2.0.0 (2023-05-10)
-----------------------------
* Core
    - TinyPedal now uses Qt GUI for all UI & widget displaying.
    - All UI & widgets have been rewritten using Qt GUI
      and support more visual effects and better performance.
    - The APP can now be launched from any folder path name.
    - There are currently 34 overlay widgets available,
      includes 10 new widgets and many reworked widgets.
    - New application main window with more functionalities,
      includes the new Widget & Module control panels
      that provide easy access to enable & disable function.
    - Add new "Config dialog" for customizing Widget & Module directly in the APP.
    - All widgets color options now support alpha value adjustment,
      which each color's opacity can be changed.
      This can be easily edited by double-clicking on color entry box
      in "Config" dialog, then adjust alpha value.
    - The old preset panel has also been redesigned with additional
      file operation supports via Right-Click context menu,
      where user can duplicate, rename, or delete selected preset.
      And preset can be easily loaded by double-clicking.
    - Add new "Display Units" config dialog,
      which handles all units setting in one place for all widgets.
    - Add "show_at_startup" and "minimize_to_tray" options to "Config" menu in main window.
    - Add "Reload" option to "Overlay" menu in main window,
      which can reload current active preset.
    - Add new customizable "heatmap.json" preset file for displaying color
      that matches specific value range of telemetry data,
      such as brake and tyre temperature.
    - Moved all previously called "real-time" modules into separated Module section,